# MCP_Sensor_Resolution

./: .gitignore  7998_edge_locations  Gaussian_results.csv  Normalization_Resolution_function.ipynb  Normalization_Resolution_function_MCP_sensor.ipynb  README.md  pixi.toml  pyproject.toml
.ipynb_checkpoints/: Normalization_Resolution_function-checkpoint.ipynb
Braggsr/: 7998_edge_locations  7998_edge_locations_boxes  devCV.ipynb  devCVresolution_combined.ipynb  pyproject.toml
Braggsr/src/braggsr/: resolution.py  testing.py  tiff_import
notebooks/: 7998_edge_locations  Normalization_Resolution_function.ipynb  Normalization_Resolution_function_MCP_sensor.ipynb  demo_usage_resolution.ipynb  devCV.ipynb  devCVresolution_combined.ipynb
scripts/: edge_identification.py  neutron_beam_divergence.py
src/braggsr/: resolution.py
