[project]
authors = [{name = "9ix", email = "9ix@ornl.gov"}]
dependencies = []
name = "Braggsr"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
braggsr = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.3.0,<3"
matplotlib = ">=3.10.3,<4"
jupyterlab = ">=4.4.3,<5"
scipy = ">=1.15.2,<2"
lmfit = ">=1.3.3,<2"
pandas = ">=2.3.0,<3"
python = ">=3.13.5,<3.14"
tifffile = ">=2025.6.11,<2026"
opencv = ">=4.11.0,<5"
imageio = ">=2.37.0,<3"
